--- a/index.css
+++ b/index.css
@@ -12,7 +12,8 @@ body{
 
 .work{
     width : 80%;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     background-color: rgb(248, 238, 233);
     border-radius: 20px;
     border : 1px solid black;
