--- a/index.css
+++ b/index.css
@@ -6,24 +6,43 @@ body,
     flex-direction: column;
 }
 
-body{
+body {
     background-color: azure;
 }
 
-.work{
-    width : 80%;
+.work {
+    width: 80%;
     height: 100%;
     min-height: 100vh;
     background-color: rgb(248, 238, 233);
     border-radius: 20px;
-    border : 1px solid black;
+    border: 1px solid black;
     font-size: 25px;
     font-style: italic;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.work p{
+.work p {
     color: rgb(73, 73, 73);
-    padding-left : 100px;
-    padding-right: 100px;
+    padding: 0px 100px;
+}
+
+
+@media (max-width : 700px) {
+    .work {
+        min-height: 100%;
+        h1 {
+            font-size: 20px;
+        }
+
+        p {
+            padding: 0px 20px;
+            font-size: 15px;
+        }
+
+        h5 {
+            font-size: 15px;
+            padding: 20px;
+        };
+    }
 }
